--- a/src/ums/templates/temp.html
+++ b/src/ums/templates/temp.html
@@ -7,6 +7,14 @@
   <title>Document</title>
 </head>
 <body>
+  <dir>
+    JOPA:
+    <a href={{ url_for('login')}}> Login</a>
+    <a href={{ url_for('users')}}> Sign up</a>
 
+  </dir>
+  <hr>
+{%block content%}
+{%endblock%}
 </body>
 </html>
