--- a/src/ums/templates/reg.html
+++ b/src/ums/templates/reg.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 <H1>Sign up</H1>
-<form action="/" method="post">
+<form action="/signup" method="post">
 <input type="text" name="login">
 <input type="password" name="password">
 <input type="submit" name='submit'>
