--- a/src/ums/templates/userpage.html
+++ b/src/ums/templates/userpage.html
@@ -1,4 +1,4 @@
-{%extends "temp.html"%}
+{%extends "template.html"%}
 {%block content%}
-<title>Hello, {{UsNa}}</title>
+  <H1>Hello, {{username}}, but I know that you are Pytoha </H1>
 {%endblock%}
