--- a/src/ums/templates/login.html
+++ b/src/ums/templates/login.html
@@ -1,7 +1,8 @@
-{% extends "temp.html" %}
+{% extends "template.html" %}
+
 {%block content%}
 <H1>Sign in</H1>
-<form action="/" method="post">
+<form action="/login" method="post">
 <input type="text" name="login">
 <input type="password" name="password">
 <input type="checkbox" name="logcheck">
