--- a/src/ums/templates/template.html
+++ b/src/ums/templates/template.html
@@ -9,9 +9,9 @@
 <body>
   <dir>
     JOPA:
+    <a href={{ url_for('home')}}> Home</a>
     <a href={{ url_for('login')}}> Login</a>
     <a href={{ url_for('users')}}> Sign up</a>
-
   </dir>
   <hr>
 {%block content%}
