--- a/src/ums/templates/template.html
+++ b/src/ums/templates/template.html
@@ -16,5 +16,14 @@
   <hr>
 {%block content%}
 {%endblock%}
+{% with messages = get_flashed_messages()%}
+  {%if messages%}
+    {% for message in messages %}
+    <ul class=messages>
+      <font color="red">{{message}}</font>
+    </ul>
+    {% endfor %}
+  {%endif%}
+{% endwith %}
 </body>
 </html>
