--- a/src/ums/templates/registration.html
+++ b/src/ums/templates/registration.html
@@ -1,5 +1,6 @@
 {% extends "template.html"%}
-
+{%block head%}
+{%endblock%}
 {%block content%}
 <H1>Sign up</H1>
 <form action="/signup" method="post">
