--- a/src/ums/static/css/pagestyle.css
+++ b/src/ums/static/css/pagestyle.css
@@ -35,9 +35,10 @@ body {
      border-radius: 5px;
      weight: 100%;
      height: 70px;
+     line-height: 2;
      font-family: 'Roboto';
-     font-size: 40px;
-     line-height: 1.5;
+     font-size: calc( (100vw - 2rem)/(80 - 30) * (1.5 - 1) + 1rem);
+
      box-shadow: 0px 0px 6px 0px #000000;
 
      }
