--- a/src/ums/templates/userlist.html
+++ b/src/ums/templates/userlist.html
@@ -1,4 +1,16 @@
 {%extends "template.html"%}
+{%block head%}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/table.css')}}"/>
+{%endblock%}
 {%block content%}
-user list page
+<table>
+  <tr>
+    <th>Username</th>
+  </tr>
+  {% for user in userlist%}
+  <tr>
+    <td>{{user.username}}</td>
+  </tr>
+  {% endfor %}
+</table>
 {%endblock%}
